<resources>
    <string name="app_name">My Modules</string>
    <string name="C203Mod">C203 Web App Development in PHP</string>
    <string name="C228Mod">C228 Operating Systems Security</string>
    <string name="C328Mod">C328 Intelligent Networks</string>
    <string name="C331Mod">C331 Digital Security and Forensics</string>
    <string name="C346Mod">C346 Mobile App Development</string>
    <string name="G953Mod">G953 Life Skills III</string>
    <string name="back">back</string>
</resources>