<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvC203"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/C203Mod" />

    <TextView
        android:id="@+id/tvC228"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/C228Mod" />

    <TextView
        android:id="@+id/tvC328"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/C328Mod" />

    <TextView
        android:id="@+id/tvC331"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/C331Mod" />

    <TextView
        android:id="@+id/tvC346"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/C346Mod" />

    <TextView
        android:id="@+id/tvG953"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/G953Mod" />

</LinearLayout>